# hooker.galore

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  travis.yml
cmake/: deploy.cmake  shaderc.cmake  texturec.cmake
lib/debug-draw/: CMakeLists.txt
lib/debug-draw/include/: debug_draw.hpp
lib/debug-draw/source/: debug_draw.cpp
lib/imgui/: CMakeLists.txt
lib/imgui/source/: ImGuizmo.cpp
lib/tiny-gltf/: CMakeLists.txt
res/levels/: default.yaml
res/materials/: blockout_gray.yaml  blockout_orange.yaml  flight_helmet.yaml  flight_helmet_1.yaml  flight_helmet_2.yaml  flight_helmet_3.yaml  flight_helmet_4.yaml  grass.yaml  parallax.yaml  pbr.yaml  test.yaml  test2.yaml
res/materials/sphere/: sphere_0_0.yaml  sphere_0_1.yaml  sphere_0_2.yaml  sphere_0_3.yaml  sphere_0_4.yaml  sphere_0_5.yaml  sphere_0_6.yaml  sphere_0_7.yaml  sphere_1_0.yaml  sphere_1_1.yaml  sphere_1_2.yaml  sphere_1_3.yaml  sphere_1_4.yaml  sphere_1_5.yaml  sphere_1_6.yaml  sphere_1_7.yaml  sphere_2_0.yaml  sphere_2_1.yaml  sphere_2_2.yaml  sphere_2_3.yaml  sphere_2_4.yaml  sphere_2_5.yaml  sphere_2_6.yaml  sphere_2_7.yaml  sphere_3_0.yaml  sphere_3_1.yaml  sphere_3_2.yaml  sphere_3_3.yaml  sphere_3_4.yaml  sphere_3_5.yaml  sphere_3_6.yaml  sphere_3_7.yaml  sphere_4_0.yaml  sphere_4_1.yaml  sphere_4_2.yaml  sphere_4_3.yaml  sphere_4_4.yaml  sphere_4_5.yaml  sphere_4_6.yaml  sphere_4_7.yaml  (+24 more)
res/models/: blockout.glb  duck.glb  flight_helmet.glb  flight_helmet_1.glb  flight_helmet_2.glb  flight_helmet_3.glb  flight_helmet_4.glb  sphere.glb  test.glb  test4.glb  test5.glb
res/presets/: blockout_gray.yaml  blockout_orange.yaml  test.yaml
res/textures/: brdf_lut.dds
resources/geometry/: damaged_helmet.glb  duck.glb
resources/levels/: 33.yaml  default.yaml  level.yaml
resources/models/: flight_helmet_2.glb  flight_helmet_4.glb  scifi_soldier.glb
resources/presets/: blockout_gray.yaml  blockout_orange.yaml
sources/: main.cpp
sources/core/base/: object.h  split.h
sources/core/ecs/: component_manager.h  system.h  system_descriptor.h  system_manager.h  tags.h  world.h  world_impl.h
sources/core/input/: controls.h
sources/core/meta/: deserializer_context.h  property_editor_context.h  registration.h
sources/core/render/: render_pass.h  unique_handle.h
sources/core/resource/: model.h  texture.h
sources/shaders/aa_pass/: aa_pass.fragment.sc
sources/shaders/debug_solid_pass/: debug_solid_pass.vertex.sc
sources/shaders/debug_textured_pass/: varying.def.sc
sources/shaders/geometry_pass/: geometry_pass.fragment.sc
sources/shaders/hdr_pass/: hdr_pass.fragment.sc
sources/shaders/headers/: bgfx_shader.sh  shader_utils.sh  shaderlib.sh
sources/shaders/lighting_pass/: lighting_pass.fragment.sc  varying.def.sc
sources/shaders/lighting_pass_point/: lighting_pass_point.fragment.sc
sources/shaders/outline_blur_pass/: outline_blur_pass.fragment.sc
sources/shaders/outline_pass/: outline_pass.vertex.sc
sources/shaders/picking_pass/: picking_pass.fragment.sc  varying.def.sc
sources/shaders/quad_pass/: quad_pass.fragment.sc
sources/shaders/shadow_pass/: shadow_pass.fragment.sc  shadow_pass.vertex.sc
sources/shaders/skybox_pass/: skybox_pass.fragment.sc
sources/world/: components.cpp  registration.h  systems.cpp
sources/world/editor/: editor_camera_component.h  editor_camera_system.h  editor_component.h  editor_file_single_component.h  editor_file_system.h  editor_gizmo_single_component.h  editor_gizmo_system.h  editor_grid_single_component.h  editor_grid_system.h  editor_history_single_component.h  editor_history_system.h  editor_menu_single_component.h  editor_menu_system.h  editor_preset_single_component.h  editor_preset_system.h  editor_property_editor_system.h  editor_selection_single_component.h  editor_selection_system.h  editor_tags.h  entity_selection_system.h  gizmo_single_component.h  gizmo_system.h  grid_single_component.h  guid_single_component.h  history_single_component.h  menu_single_component.h  preset_single_component.h  preset_system.h  property_editor_system.h  selected_entity_single_component.h
sources/world/physics/: physics_box_shape_component.h  physics_box_shape_private_component.h  physics_character_controller_component.h  physics_character_controller_private_component.h  physics_character_controller_single_component.h  physics_single_component.h  physics_static_rigid_body_private_component.h  physics_tags.h  physics_utils.h
sources/world/render/: aa_pass_single_component.h  aa_pass_system.h  camera_single_component.h  debug_draw_pass_single_component.h  debug_draw_pass_system.h  geometry_pass_single_component.h  geometry_pass_system.h  hdr_pass_single_component.h  hdr_pass_system.h  lighting_pass_single_component.h  lighting_pass_system.h  material_component.h  model_component.h  outline_pass_single_component.h  outline_pass_system.h  picking_pass_single_component.h  picking_pass_system.h  quad_single_component.h  quad_system.h  render_system.h  render_tags.h  shadow_pass_single_component.h  shadow_pass_system.h  skybox_pass_single_component.h  skybox_pass_system.h  texture_single_component.h
sources/world/resource/: resource.h  resource_geometry.h  resource_geometry_component.h  resource_single_component.h  resource_system.h
sources/world/shared/: imgui_fetch_system.h  imgui_single_component.h  name_component.h  name_single_component.h  normal_input_single_component.h  resource_system.h  resource_utils.h  shared_tags.h  transform_component.h  window_single_component.h
src/: main.cpp
src/core/ecs/: system.h  world.h  world_impl.h
src/core/input/: controls.h
src/core/render/: debug_draw.h  render_pass.h
src/core/resource/: filesystem.h  material.h  model.h  texture.h
src/shaders/aa_pass/: aa_pass.fragment.sc
src/shaders/debug_solid_pass/: debug_solid_pass.fragment.h  debug_solid_pass.vertex.h  debug_solid_pass.vertex.sc  varying.def.sc
src/shaders/debug_textured_pass/: debug_textured_pass.fragment.h  (+3 more)
src/world/: components.cpp  systems.cpp
tools/Darwin/: texturec
tools/Linux/: texturec
(+305 files in other folders)
